# mms_nirs

./: .flake8  .gitignore  CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yaml
mms_nirs/: DefaultValues.py  MBL.py  defaults.csv
mms_nirs/BRUNO/: ModelTypes.py  __init__.py  boundaries.py  calc_values.py  derivative_fit.py  fminsearchbnd.py  model_types.py
mms_nirs/SRS/: SRS.py  __init__.py
mms_nirs/UCLN/: DefaultValues.py  UCLN.py  __init__.py  defaults.csv
mms_nirs/utils/: __init__.py  attenuation.py  dpf.py  extinction_coefficients.py
tests/: test_MBL.py
tests/BRUNO/: test_ModelTypes.py  test_calc_values.py  test_derivative_fit.py  test_fminsearchbnd.py  test_model_types.py
tests/BRUNO/fixtures/: attenuations.csv  extinctions.csv  slope.csv  wavelengths.csv
tests/UCLN/: test_UCLN.py
tests/UCLN/test_data/: test_spectra.csv
tests/test_data/UCLN/: test_conc.csv  test_spectra.csv  wavelengths.csv
tests/utils/: test_attenuation.py  test_dpf.py
